--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     architecto repellendus ratione quaerat.
                 </p>
                 <div class="butons">
-                    <a href="#" class="btn-1">Infomracion</a>
+                    <a href="#" class="btn-1">Informacion</a>
                     <a href="#" class="btn-1">Juegos</a>
                 </div>
             </div>
@@ -54,7 +54,7 @@
             <img src="Imagenes/g7.webp" alt="">
     </section>
 
-    <main class="productos container">
+    <main class="product-container">
         <h2>Todos los juegos</h2>
 
         <div class="product-1">
