--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
     </header>
 
-    <section class="popular container">
+    <section class="popular-container">
             <h2>Juegos populares</h2>
             <div class="popular-content"></div>
             <img src="Imagenes/g1.webp" alt="">
@@ -54,13 +54,13 @@
             <img src="Imagenes/g7.webp" alt="">
     </section>
 
-    <main class="product-container">
+    <main class="product container">
         <h2>Todos los juegos</h2>
 
         <div class="product-1">
             <img src="Imagenes/l1.webp" alt="">
             <div class="product-txt">
-                <h3>Jugeo lorem</h3>
+                <h3>Juego lorem</h3>
                 <div class="price">
                     <p>500$</p>
                     <a href="#" class="btn-2">Comprar</a>
@@ -70,7 +70,7 @@
         <div class="product-1">
             <img src="Imagenes/l2.webp" alt="">
             <div class="product-txt">
-                <h3>Jugeo lorem</h3>
+                <h3>Juego lorem</h3>
                 <div class="price">
                     <p>500$</p>
                     <a href="#" class="btn-2">Comprar</a>
@@ -80,7 +80,7 @@
         <div class="product-1">
             <img src="Imagenes/l3.webp" alt="">
             <div class="product-txt">
-                <h3>Jugeo lorem</h3>
+                <h3>Juego lorem</h3>
                 <div class="price">
                     <p>500$</p>
                     <a href="#" class="btn-2">Comprar</a>
@@ -90,7 +90,7 @@
         <div class="product-1">
             <img src="Imagenes/l4.webp" alt="">
             <div class="product-txt">
-                <h3>Jugeo lorem</h3>
+                <h3>Juego lorem</h3>
                 <div class="price">
                     <p>500$</p>
                     <a href="#" class="btn-2">Comprar</a>
@@ -100,7 +100,7 @@
         <div class="product-1">
             <img src="Imagenes/l5.webp" alt="">
             <div class="product-txt">
-                <h3>Jugeo lorem</h3>
+                <h3>Juego lorem</h3>
                 <div class="price">
                     <p>500$</p>
                     <a href="#" class="btn-2">Comprar</a>
@@ -110,7 +110,7 @@
         <div class="product-1">
             <img src="Imagenes/l6.webp" alt="">
             <div class="product-txt">
-                <h3>Jugeo lorem</h3>
+                <h3>Juego lorem</h3>
                 <div class="price">
                     <p>500$</p>
                     <a href="#" class="btn-2">Comprar</a>
@@ -120,7 +120,7 @@
         <div class="product-1">
             <img src="Imagenes/l7.webp" alt="">
             <div class="product-txt">
-                <h3>Jugeo lorem</h3>
+                <h3>Juego lorem</h3>
                 <div class="price">
                     <p>500$</p>
                     <a href="#" class="btn-2">Comprar</a>
@@ -130,7 +130,7 @@
         <div class="product-1">
             <img src="Imagenes/l8.webp" alt="">
             <div class="product-txt">
-                <h3>Jugeo lorem</h3>
+                <h3>Juego lorem</h3>
                 <div class="price">
                     <p>500$</p>
                     <a href="#" class="btn-2">Comprar</a>
@@ -143,11 +143,15 @@
 
         <div class="contact-container">
             <h3>Suscribete a este blog</h3>
-            <input type="submit" class="btn-3" value="Enviar">
+            <form>
+                <input type="email" placeholder="Enviar el correo">
+                <input type="submit" class="btn-3" value="Enviar">
+            </form>
+            
         </div>
     </section>
 
-    <footer class="footer container">
+    <footer class="footer-container">
 
         <div class="link">
             <a href="#" class="logo">Logo</a>
