Correcion de errores

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <header class="header">
         <div class="menu-container">
             <a href="#" class="logo">Logo</a>
-            <input type="checkbox" id="menu">
+            <input type="checkbox" id="menu"/>
             <label for="menu">
-                <img src="Imagenes/menu.webp" alt="">
+                <img src="Imagenes/menu.webp" class="menu-icono" alt="menu">
             </label>
             <nav class="navbar">
                 <ul>
@@ -56,6 +56,8 @@
 
     <main class="product container">
         <h2>Todos los juegos</h2>
+
+        <div class="product-content">
 
         <div class="product-1">
             <img src="Imagenes/l1.webp" alt="">
@@ -137,11 +139,12 @@
                 </div>
             </div>
         </div>
+    </div>
     </main>
 
     <section class="contact container">
 
-        <div class="contact-container">
+        <div class="contact-content">
             <h3>Suscribete a este blog</h3>
             <form>
                 <input type="email" placeholder="Enviar el correo">
@@ -151,7 +154,7 @@
         </div>
     </section>
 
-    <footer class="footer-container">
+    <footer class="footer container">
 
         <div class="link">
             <a href="#" class="logo">Logo</a>
