Correción de errores

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
     </header>
 
-    <section class="popular-container">
+    <section class="popular-content">
             <h2>Juegos populares</h2>
             <div class="popular-content"></div>
             <img src="Imagenes/g1.webp" alt="">
