--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <header class="header">
         <div class="menu-container">
-            <a href="#" class="logo">Logo</a>
+            <a href="#" class="logo">SGames</a>
             <input type="checkbox" id="menu"/>
             <label for="menu">
                 <img src="Imagenes/menu.webp" class="menu-icono" alt="menu">
@@ -157,15 +157,16 @@
     <footer class="footer container">
 
         <div class="link">
-            <a href="#" class="logo">Logo</a>
+            <a href="#" class="logo">SGames</a>
+
         </div>
 
-        <div>
+        <div class="link">
             <ul>
                 <li><a href="#">Inicio</a></li>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Servicios</a></li>
+                <li><a href="#">Productos</a></li>
+                <li><a href="#">Inicio Sesion</a></li>
             </ul>
         </div>
     </footer>
