--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <header class="header">
-        <div class="menu-container">
+        <div class="menu container">
             <a href="#" class="logo">SGames</a>
             <input type="checkbox" id="menu"/>
             <label for="menu">
