Link de paginas web

--- a/InicioSesion.html
+++ b/InicioSesion.html
@@ -19,8 +19,7 @@
 
             <div class="input-box">
                 <input type="password" placeholder="Contraseña" 
-                required>
-                
+                required>   
             </div>
 
             <div class="remember-forgot">
@@ -31,7 +30,7 @@
             
             <div class="register-link">
                 <p>¿No te has registrado?</p>
-                <a href="#">Registrate</a>
+                <a href="Registro.html">Registrate</a>
             </div>
 
         </form>
