--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <ul>
                     <li><a href="#">Inicio</a></li>
                     <li><a href="#">Servicios</a></li>
-                    <li><a href="#">Productos</a></li>
-                    <li><a href="#">Inicio Sesion</a></li>
+                    <li><a href="#product container">Productos</a></li>
+                    <li><a href="InicioSesion.html">Inicio Sesion</a></li>
                 </ul>
             </nav>
         </div>
@@ -54,17 +54,17 @@
             <img src="Imagenes/g7.webp" alt="">
     </section>
 
-    <main class="product container">
+    <main class="product container" id="product container">
         <h2>Todos los juegos</h2>
 
-        <div class="product-content">
+        <div class="product-content" >
 
         <div class="product-1">
             <img src="Imagenes/l1.webp" alt="">
             <div class="product-txt">
-                <h3>Juego lorem</h3>
+                <h3>Halo reach</h3>
                 <div class="price">
-                    <p>500$</p>
+                    <p>50$</p>
                     <a href="#" class="btn-2">Comprar</a>
                 </div>
             </div>
@@ -82,9 +82,9 @@
         <div class="product-1">
             <img src="Imagenes/l3.webp" alt="">
             <div class="product-txt">
-                <h3>Juego lorem</h3>
+                <h3>Clash royale</h3>
                 <div class="price">
-                    <p>500$</p>
+                    <p>25$</p>
                     <a href="#" class="btn-2">Comprar</a>
                 </div>
             </div>
@@ -92,9 +92,9 @@
         <div class="product-1">
             <img src="Imagenes/l4.webp" alt="">
             <div class="product-txt">
-                <h3>Juego lorem</h3>
+                <h3>Cyberpunk 2077</h3>
                 <div class="price">
-                    <p>500$</p>
+                    <p>70$</p>
                     <a href="#" class="btn-2">Comprar</a>
                 </div>
             </div>
@@ -102,9 +102,9 @@
         <div class="product-1">
             <img src="Imagenes/l5.webp" alt="">
             <div class="product-txt">
-                <h3>Juego lorem</h3>
+                <h3>Fornite</h3>
                 <div class="price">
-                    <p>500$</p>
+                    <p>30$</p>
                     <a href="#" class="btn-2">Comprar</a>
                 </div>
             </div>
@@ -112,9 +112,9 @@
         <div class="product-1">
             <img src="Imagenes/l6.webp" alt="">
             <div class="product-txt">
-                <h3>Juego lorem</h3>
+                <h3>Gear of war</h3>
                 <div class="price">
-                    <p>500$</p>
+                    <p>55$</p>
                     <a href="#" class="btn-2">Comprar</a>
                 </div>
             </div>
@@ -122,7 +122,7 @@
         <div class="product-1">
             <img src="Imagenes/l7.webp" alt="">
             <div class="product-txt">
-                <h3>Juego lorem</h3>
+                <h3>Crash team racing</h3>
                 <div class="price">
                     <p>500$</p>
                     <a href="#" class="btn-2">Comprar</a>
@@ -132,27 +132,15 @@
         <div class="product-1">
             <img src="Imagenes/l8.webp" alt="">
             <div class="product-txt">
-                <h3>Juego lorem</h3>
+                <h3>GTA VI</h3>
                 <div class="price">
-                    <p>500$</p>
+                    <p>120$</p>
                     <a href="#" class="btn-2">Comprar</a>
                 </div>
             </div>
         </div>
     </div>
     </main>
-
-    <section class="contact container">
-
-        <div class="contact-content">
-            <h3>Suscribete a este blog</h3>
-            <form>
-                <input type="email" placeholder="Enviar el correo">
-                <input type="submit" class="btn-3" value="Enviar">
-            </form>
-            
-        </div>
-    </section>
 
     <footer class="footer container">
 
@@ -166,7 +154,7 @@
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#">Servicios</a></li>
                 <li><a href="#">Productos</a></li>
-                <li><a href="#">Inicio Sesion</a></li>
+                <li><a href="InicioSesion.html">Inicio Sesion</a></li>
             </ul>
         </div>
     </footer>
