--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
             </label>
             <nav class="navbar">
                 <ul>
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Servicios</a></li>
-                    <li><a href="#product container">Productos</a></li>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="#product container">Juegos</a></li>
                     <li><a href="InicioSesion.html">Inicio Sesion</a></li>
                 </ul>
             </nav>
@@ -151,9 +150,8 @@
 
         <div class="link">
             <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Servicios</a></li>
-                <li><a href="#">Productos</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="#product container">Juegos</a></li>
                 <li><a href="InicioSesion.html">Inicio Sesion</a></li>
             </ul>
         </div>
