Precio cambio del  resumen de la pagina

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header">
         <div class="menu container">
             <a href="#" class="logo">SGames</a>
-            <input type="checkbox" id="menu"/>
+            <input type="checkbox" id="menu" />
             <label for="menu">
                 <img src="Imagenes/menu.webp" class="menu-icono" alt="menu">
             </label>
@@ -29,9 +29,10 @@
         <div class="header-content container">
             <div class="header-txt">
                 <h1>Compra tu <span>juego</span> Favorito aqui</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit tempora ullam animi. Quasi
-                    voluptatibus rerum sapiente ipsum, aliquid quod cumque, sint perferendis enim minus aut dolorem,
-                    architecto repellendus ratione quaerat.
+                <p>Presentamos la plataforma de videojuegos definitiva: experiencias inmersivas, gráficos de vanguardia
+                    y una biblioteca diversa de títulos emocionantes. Con funciones sociales integradas, competiciones
+                    en línea y acceso multiplataforma, ofrecemos la mejor plataforma para los amantes de los
+                    videojuegos. ¡Descubre un universo de entretenimiento sin límites con nosotros!
                 </p>
                 <div class="butons">
                     <a href="#" class="btn-1">Informacion</a>
@@ -42,103 +43,103 @@
     </header>
 
     <section class="popular-content">
-            <h2>Juegos populares</h2>
-            <div class="popular-content"></div>
-            <img src="Imagenes/g1.webp" alt="">
-            <img src="Imagenes/g2.webp" alt="">
-            <img src="Imagenes/g3.webp" alt="">
-            <img src="Imagenes/g4.webp" alt="">
-            <img src="Imagenes/g5.webp" alt="">
-            <img src="Imagenes/g6.webp" alt="">
-            <img src="Imagenes/g7.webp" alt="">
+        <h2>Juegos populares</h2>
+        <div class="popular-content"></div>
+        <img src="Imagenes/g1.webp" alt="">
+        <img src="Imagenes/g2.webp" alt="">
+        <img src="Imagenes/g3.webp" alt="">
+        <img src="Imagenes/g4.webp" alt="">
+        <img src="Imagenes/g5.webp" alt="">
+        <img src="Imagenes/g6.webp" alt="">
+        <img src="Imagenes/g7.webp" alt="">
     </section>
 
     <main class="product container" id="product container">
         <h2>Todos los juegos</h2>
 
-        <div class="product-content" >
+        <div class="product-content">
 
-        <div class="product-1">
-            <img src="Imagenes/l1.webp" alt="">
-            <div class="product-txt">
-                <h3>Halo reach</h3>
-                <div class="price">
-                    <p>50$</p>
-                    <a href="#" class="btn-2">Comprar</a>
+            <div class="product-1">
+                <img src="Imagenes/l1.webp" alt="">
+                <div class="product-txt">
+                    <h3>Halo reach</h3>
+                    <div class="price">
+                        <p>50$</p>
+                        <a href="#" class="btn-2">Comprar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="product-1">
+                <img src="Imagenes/l2.webp" alt="">
+                <div class="product-txt">
+                    <h3>Juego lorem</h3>
+                    <div class="price">
+                        <p>500$</p>
+                        <a href="#" class="btn-2">Comprar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="product-1">
+                <img src="Imagenes/l3.webp" alt="">
+                <div class="product-txt">
+                    <h3>Clash royale</h3>
+                    <div class="price">
+                        <p>25$</p>
+                        <a href="#" class="btn-2">Comprar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="product-1">
+                <img src="Imagenes/l4.webp" alt="">
+                <div class="product-txt">
+                    <h3>Cyberpunk 2077</h3>
+                    <div class="price">
+                        <p>70$</p>
+                        <a href="#" class="btn-2">Comprar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="product-1">
+                <img src="Imagenes/l5.webp" alt="">
+                <div class="product-txt">
+                    <h3>Fornite</h3>
+                    <div class="price">
+                        <p>30$</p>
+                        <a href="#" class="btn-2">Comprar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="product-1">
+                <img src="Imagenes/l6.webp" alt="">
+                <div class="product-txt">
+                    <h3>Gear of war</h3>
+                    <div class="price">
+                        <p>55$</p>
+                        <a href="#" class="btn-2">Comprar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="product-1">
+                <img src="Imagenes/l7.webp" alt="">
+                <div class="product-txt">
+                    <h3>Crash team racing</h3>
+                    <div class="price">
+                        <p>500$</p>
+                        <a href="#" class="btn-2">Comprar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="product-1">
+                <img src="Imagenes/l8.webp" alt="">
+                <div class="product-txt">
+                    <h3>GTA VI</h3>
+                    <div class="price">
+                        <p>120$</p>
+                        <a href="#" class="btn-2">Comprar</a>
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="product-1">
-            <img src="Imagenes/l2.webp" alt="">
-            <div class="product-txt">
-                <h3>Juego lorem</h3>
-                <div class="price">
-                    <p>500$</p>
-                    <a href="#" class="btn-2">Comprar</a>
-                </div>
-            </div>
-        </div>
-        <div class="product-1">
-            <img src="Imagenes/l3.webp" alt="">
-            <div class="product-txt">
-                <h3>Clash royale</h3>
-                <div class="price">
-                    <p>25$</p>
-                    <a href="#" class="btn-2">Comprar</a>
-                </div>
-            </div>
-        </div>
-        <div class="product-1">
-            <img src="Imagenes/l4.webp" alt="">
-            <div class="product-txt">
-                <h3>Cyberpunk 2077</h3>
-                <div class="price">
-                    <p>70$</p>
-                    <a href="#" class="btn-2">Comprar</a>
-                </div>
-            </div>
-        </div>
-        <div class="product-1">
-            <img src="Imagenes/l5.webp" alt="">
-            <div class="product-txt">
-                <h3>Fornite</h3>
-                <div class="price">
-                    <p>30$</p>
-                    <a href="#" class="btn-2">Comprar</a>
-                </div>
-            </div>
-        </div>
-        <div class="product-1">
-            <img src="Imagenes/l6.webp" alt="">
-            <div class="product-txt">
-                <h3>Gear of war</h3>
-                <div class="price">
-                    <p>55$</p>
-                    <a href="#" class="btn-2">Comprar</a>
-                </div>
-            </div>
-        </div>
-        <div class="product-1">
-            <img src="Imagenes/l7.webp" alt="">
-            <div class="product-txt">
-                <h3>Crash team racing</h3>
-                <div class="price">
-                    <p>500$</p>
-                    <a href="#" class="btn-2">Comprar</a>
-                </div>
-            </div>
-        </div>
-        <div class="product-1">
-            <img src="Imagenes/l8.webp" alt="">
-            <div class="product-txt">
-                <h3>GTA VI</h3>
-                <div class="price">
-                    <p>120$</p>
-                    <a href="#" class="btn-2">Comprar</a>
-                </div>
-            </div>
-        </div>
-    </div>
     </main>
 
     <footer class="footer container">
