Pagina de informacion con css y html mas linkeo de la pagina informacion con la pagina principal

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                     videojuegos. ¡Descubre un universo de entretenimiento sin límites con nosotros!
                 </p>
                 <div class="butons">
-                    <a href="#" class="btn-1">Informacion</a>
-                    <a href="#" class="btn-1">Juegos</a>
+                    <a href="informacion.html" class="btn-1">Informacion</a>
+                    <a href="#product container" class="btn-1">Juegos</a>
                 </div>
             </div>
         </div>
