--- a/informacion.html
+++ b/informacion.html
@@ -14,7 +14,7 @@
         <div class="container">
             <!-- Barra de navegación -->
             <div class="menu">
-                <a href="#" class="logo">Logo</a>
+                <a href="#" class="logo">SGames</a>
                 <input type="checkbox" id="menu">
                 <label for="menu">
                     <img src="Imagenes/menu.webp" class="menu-icono" alt="">
