cambios por ver

--- a/InicioSesion.html
+++ b/InicioSesion.html
@@ -9,16 +9,16 @@
 <body>
 
     <div class="wrapper">
-        <form action="">
+        <form action="" >
             <h1>Login</h1>
 
             <div class="input-box">
-                <input type="text" placeholder="Usuario" 
+                <input type="text" placeholder="Usuario" id="usuario"
                 required>
             </div>    
 
             <div class="input-box">
-                <input type="password" placeholder="Contraseña" 
+                <input type="password" placeholder="Contraseña" id="Contrasenna"
                 required>   
             </div>
 
@@ -32,7 +32,7 @@
                 <p>¿No te has registrado?</p>
                 <a href="Registro.html">Registrate</a>
             </div>
-
+            <script src="registro.js" defer></script>
         </form>
     </div>
 </body>
