--- a/InicioSesion.html
+++ b/InicioSesion.html
@@ -26,7 +26,8 @@
                 <a href="#">¿Se te ha olvidado la Contraseña?</a>
             </div>
             
-            <button type="submit" class="btn">Iniciar Sesion</button>
+            <button type="submit" class="btn">
+                Iniciar Sesion</button>
             
             <div class="register-link">
                 <p>¿No te has registrado?</p>
