--- a/Registro.html
+++ b/Registro.html
@@ -8,6 +8,22 @@
 </head>
 <body>
 
+    <header class="header">
+        <div class="menu container">
+            <a href="#" class="logo">SGames</a>
+            <input type="checkbox" id="menu" />
+            <label for="menu">
+                <img src="Imagenes/menu.webp" class="menu-icono" alt="menu">
+            </label>
+            <nav class="navbar">
+                <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="Registro.html">Registrarse</a></li>
+                </ul>
+            </nav>
+        </div>
+
+
     <div class="wrapper">
         <form action="">
             <h1>Login</h1>
