--- a/Registro.html
+++ b/Registro.html
@@ -18,7 +18,7 @@
             <nav class="navbar">
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="Registro.html">Registrarse</a></li>
+                    <li><a href="InicioSesion.html">Inicio Sesion</a></li>
                 </ul>
             </nav>
         </div>
