--- a/InicioSesion.html
+++ b/InicioSesion.html
@@ -25,7 +25,7 @@
 
     <div class="wrapper">
         <form action="" >
-            <h1>Login</h1>
+            <h1>Inicio Sesión</h1>
 
             <div class="input-box">
                 <input type="text" placeholder="Usuario" id="usuario"
