--- a/Registro.html
+++ b/Registro.html
@@ -26,7 +26,7 @@
 
     <div class="wrapper">
         <form action="">
-            <h1>Login</h1>
+            <h1>Registrate</h1>
 
             <div class="input-box">
                 <input type="text" placeholder="Usuario" id="usuario"
