--- a/informacion.html
+++ b/informacion.html
@@ -23,7 +23,7 @@
                 <nav class="navbar">
                     <ul>
                         <li><a href="index.html">Inicio</a></li>
-                        <li><a href="#servicios">Inicio Sesion</a></li>
+                        <li><a href="InicioSesion.html">Inicio Sesion</a></li>
                     </ul>
                 </nav>
             </div>
