--- a/informacion.html
+++ b/informacion.html
@@ -74,13 +74,9 @@
         <div class="Informacion-txt">
             <h2>Informacion</h2>
             <p>
-                El diseño de interiores es un campo diverso y apasionante que se ocupa de la creación de espacios que
-                sean atractivos, funcionales y cómodos.
-                Requiere un equilibrio cuidadoso entre estética y utilidad, y puede ser personalizado para reflejar la
-                personalidad y los gustos del cliente.
-                Con la combinación adecuada de colores, mobiliario, iluminación y disposición de elementos, un diseñador
-                de interiores puede transformar un espacio en un entorno agradable y armonioso.
-                Si quieres mas informacio puedes pinchar aqui.
+                En SGames, no solo ofrecemos una selección excepcional de videojuegos, sino que también transformamos
+                la experiencia de juego en algo extraordinario. Aquí te presentamos lo que hace que SGames sea la
+                plataforma de elección para los verdaderos amantes de los videojuegos:
             </p>
         </div>
     </section>
