--- a/informacion.html
+++ b/informacion.html
@@ -76,7 +76,7 @@
             <p>
                 En SGames, no solo ofrecemos una selección excepcional de videojuegos, sino que también transformamos
                 la experiencia de juego en algo extraordinario. Aquí te presentamos lo que hace que SGames sea la
-                plataforma de elección para los verdaderos amantes de los videojuegos:
+                plataforma de elección para los verdaderos amantes de los videojuegos.
             </p>
         </div>
     </section>
