--- a/InicioSesion.html
+++ b/InicioSesion.html
@@ -38,7 +38,7 @@
             </div>
 
             <div class="remember-forgot">
-                <a href="#">¿Se te ha olvidado la Contraseña?</a>
+                <a href="OlvContr.html">¿Se te ha olvidado la Contraseña?</a>
             </div>
             
             <button type="submit" class="btn" onclick="Login()">
