--- a/OlvContr.html
+++ b/OlvContr.html
@@ -38,7 +38,7 @@
                 </div>
                     
                 <button type="submit" class="btn" onclick="Login()">
-                    Iniciar Sesion</button>
+                    Cambiar contraseña  </button>
             </form>
         </div>
     </body>
