--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="#product container">Juegos</a></li>
-                    <li><a href="InicioSesion.html">Inicio Sesion</a></li>
+                    <li><a href="Registro.html">Registrate</a></li>
                 </ul>
             </nav>
         </div>
