--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="product-1">
                 <img src="Imagenes/l2.webp" alt="">
                 <div class="product-txt">
-                    <h3>Juego lorem</h3>
+                    <h3>Horizon zero</h3>
                     <div class="price">
                         <p>500$</p>
                         <a href="#" class="btn-2">Comprar</a>
@@ -157,7 +157,5 @@
             </ul>
         </div>
     </footer>
-
 </body>
-
 </html>
