--- a/informacion.html
+++ b/informacion.html
@@ -104,7 +104,7 @@
         <h2>Contacto</h2>
         <!-- Formulario de contacto -->
         <form>
-            <a href="mailto:oscarambrosio23@gmail.com?subject=Consulta%20de%20Interiores&body=Hola%20Equipo%20de%20Interiores,%0D%0A%0D%0AQuisiera%20hacer%20una%20consulta%20sobre%20los%20servicios.%0D%0A%0D%0AAtentamente,%0D%0ATu%20Nombre"
+            <a href="mailto:oscarambrosio23@gmail.com?subject=Hola%20buenas,%20os%20escribo%20porque:%0A%0D%0AQuisiera%20hacer%20una%20consulta%20sobre%20los%20servicios.%0D%0A%0D%0AAtentamente,%0D%0ATu%20Nombre"
                 class="btn-1">Contactar</a>
         </form>
     </section>
